just modify title

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Header -->
     <header id="top-bar">
-        <h1>Meu curriculo</h1>
+        <h1>Curriculum Vitae</h1>
     </header>  
     
     <!-- Main -->
